<resources>
    <string name="app_name">QUIZ</string>
    <string name="first_answer">первый вариант ответа</string>
    <string name="second_answer">второй вариант ответа</string>
    <string name="third_answer">третий вариант ответа</string>
    <string name="fourth_answer">четвертый вариант ответа</string>
    <string name="answer_button">ОТВЕТИТЬ</string>
    <string name="start_button">НАЧАТЬ</string>
    <string name="end_button">НАЧАТЬ ЗАНОВО</string>

    <string name="title_activity_navigation">NavigationActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">QUIZ</string>
    <string name="second_fragment_label">Questions</string>
    <string name="third_fragment_label">Results</string>

    <string name="next">Next</string>
    <string name="previous">Назад</string>
    <string name="send">Отправить</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="question1">Первый вопрос</string>
    <string name="question2">Второй вопрос</string>
    <string name="question3">Третий вопрос</string>
    <string name="congrat">ПОЗДРАВЛЯЕМ!!!</string>
    <string name="text_points">Ваш результат:</string>
    <string name="setBDText">Ваша дата рождения</string>
    
    <string name="date_dialog_title">Укажите Вашу дату рождения</string>
    <string name="date_snackbar_title">Вы указали дату рождения: </string>


</resources>