<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/teal_light"
    tools:context="com.example.android_hw09_quiz_relize_en_calendar.navigation.NavigationActivity">

<!--    <Button-->
<!--        android:id="@+id/previous"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_margin="16dp"-->
<!--        android:text="@string/previous"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <TextView
        android:id="@+id/textQuizTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/red"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@+id/quizName"
        tools:text="@tools:sample/lorem/random"
        android:lines="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/send"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="visible"
        android:alpha="0" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="78dp"
        android:layout_marginBottom="96dp"
        tools:context="com.example.android_hw09_quiz_relize_en_calendar.navigation.QuizScreen"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- первый вопрос -->
            <TextView
                android:id="@+id/titleQuestion1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1"
                android:textColor="@color/teal_dark"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/textPoints1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="(10 баллов)"
                android:textColor="@color/red"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleQuestion1" />

            <TextView
                android:id="@+id/textQuestion1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:textColor="@color/purple_light"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textPoints1"
                tools:text="@tools:sample/lorem/random" />

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textQuestion1">

                <RadioButton
                    android:id="@+id/radio11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_answer" />

                <RadioButton
                    android:id="@+id/radio12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/second_answer" />

                <RadioButton
                    android:id="@+id/radio13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/third_answer" />

                <RadioButton
                    android:id="@+id/radio14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fourth_answer" />
            </RadioGroup>
            <!-- - -->

            <!-- второй вопрос -->
            <TextView
                android:id="@+id/titleQuestion2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_dark"
                android:textSize="24sp"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/question2" />
            <TextView
                android:id="@+id/textPoints2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="(10 баллов)"
                android:textColor="@color/red"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleQuestion2" />

            <TextView
                android:id="@+id/textQuestion2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:gravity="center"
                android:textColor="@color/purple_light"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textPoints2"
                tools:text="@tools:sample/lorem/random" />

            <RadioGroup
                android:id="@+id/radioGroup2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textQuestion2">

                <RadioButton
                    android:id="@+id/radio21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_answer" />

                <RadioButton
                    android:id="@+id/radio22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/second_answer" />

                <RadioButton
                    android:id="@+id/radio23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/third_answer" />

                <RadioButton
                    android:id="@+id/radio24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fourth_answer" />
            </RadioGroup>
            <!-- - -->

            <!-- третий вопрос -->
            <TextView
                android:id="@+id/titleQuestion3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_dark"
                android:textSize="24sp"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/question3" />
            <TextView
                android:id="@+id/textPoints3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="(10 баллов)"
                android:textColor="@color/red"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleQuestion3" />

            <TextView
                android:id="@+id/textQuestion3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:gravity="center"
                android:textColor="@color/purple_light"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textPoints3"
                tools:text="@tools:sample/lorem/random" />

            <RadioGroup
                android:id="@+id/radioGroup3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textQuestion3">

                <RadioButton
                    android:id="@+id/radio31"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_answer" />

                <RadioButton
                    android:id="@+id/radio32"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/second_answer" />

                <RadioButton
                    android:id="@+id/radio33"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/third_answer" />

                <RadioButton
                    android:id="@+id/radio34"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fourth_answer" />
            </RadioGroup>
            <!-- - -->

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="100dp"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/radioGroup_3"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent" />-->


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>